[package]
name = "conditional-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0.188", features=["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features=["postgres", "chrono", "runtime-tokio-native-tls", "macros"] }
utoipa = { version = "3.3.0", features = ["actix_extras", "chrono", "debug", "yaml"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web"] }