[package]
name = "conditional-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
anyhow = "1.0.75"
async-trait = "0.1.73"
chrono = { version = "0.4.31", features = ["serde"] }
deadpool = { version = "0.10.0", default-features = false, features = ["async-trait", "managed"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
lazy_static = "1.4.0"
ldap3 = "0.11.3"
log = "0.4.20"
rand = "0.8.5"
regex = "1.9.6"
serde = { version = "1.0.188", features=["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["postgres", "chrono", "runtime-tokio-native-tls", "macros"] }
trust-dns-resolver = "0.23.0"
utoipa = { version = "3.3.0", features = ["actix_extras", "chrono", "debug", "yaml"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web"] }
