[package]
name = "conditional-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.5.1"
actix-web-validator = "5.0.1"
anyhow = "1.0.75"
async-trait = "0.1.73"
base64 = "0.21.4"
chrono = { version = "0.4.31", features = ["serde"] }
deadpool = { version = "0.10.0", default-features = false, features = ["async-trait", "managed"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
lazy_static = "1.4.0"
ldap3 = "0.11.3"
log = "0.4.20"
openssl = "0.10.57"
rand = "0.8.5"
regex = "1.9.6"
reqwest = { version = "0.11.24", features = ["json", "serde_json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107", features = ["raw_value"] }
sqlx = { version = "0.7.3", features = ["postgres", "chrono", "runtime-tokio-native-tls", "macros", "json"] }
trust-dns-resolver = "0.23.0"
utoipa = { version = "3.3.0", features = ["actix_extras", "chrono", "debug", "yaml"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web"] }
validator = { version = "0.16.1", features = ["derive"] }